--- a/puush-deletion/puush-deletion.csproj
+++ b/puush-deletion/puush-deletion.csproj
@@ -11,7 +11,7 @@
       <PackageReference Include="DogStatsD-CSharp-Client" Version="3.1.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
-      <PackageReference Include="MySql.Data" Version="8.0.12" />
+      <PackageReference Include="MySqlConnector" Version="0.45.1" />
     </ItemGroup>
 
 </Project>
