--- a/puush-deletion/puush-deletion.csproj
+++ b/puush-deletion/puush-deletion.csproj
@@ -2,16 +2,16 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>puush_deletion</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AWSSDK.S3" Version="3.3.106.5" />
-      <PackageReference Include="DogStatsD-CSharp-Client" Version="3.3.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
-      <PackageReference Include="MySqlConnector" Version="0.61.0" />
+      <PackageReference Include="AWSSDK.S3" Version="3.7.1.21" />
+      <PackageReference Include="DogStatsD-CSharp-Client" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+      <PackageReference Include="MySqlConnector" Version="1.3.11" />
     </ItemGroup>
 
 </Project>
